--- a/src/index.css
+++ b/src/index.css
@@ -63,10 +63,6 @@ html:not(.dark) {
 	padding: 0;
 }
 
-:root {
-    scroll-behavior: smooth;
-}
-
 @media screen and (max-width: 480px) {
 }
 
